--- a/css/style.css
+++ b/css/style.css
@@ -106,47 +106,56 @@ body {
         line-height: 1;
     }
 
-    .social li {
-        display: inline-block;
-	    margin-right: 2px;
+    .social {
+	    margin-top: -10px;
     }
-		.social li:hover a {
-			transform: translateY(-10px);
-		}
-		.social a {
-            display: block;
-			transition: transform 0.2s linear;
-        }
-			.vk {
-				background-image: url(../img/vk.png);
-				width: 40px;
-				height: 40px;
+		.social li {
+	        display: inline-block;
+		    margin-right: 2px;
+	    }
+			.social li:hover a {
+				transform: translateY(-10px);
 			}
-			.linkedin {
-				background-image: url(../img/linkedin.png);
-				width: 40px;
-				height: 40px;
-			}
-			.twitter {
-				background-image: url(../img/twitter.png);
-				width: 40px;
-				height: 40px;
-			}
-			.skype {
-				background-image: url(../img/skype.png);
-				width: 40px;
-				height: 40px;
-			}
-			.email {
-				background-image: url(../img/email.png);
-				width: 40px;
-				height: 40px;
-			}
-			.github {
-				background-image: url(../img/github.png);
-				width: 40px;
-				height: 40px;
-			}
+			.social a {
+	            display: block;
+				transition: transform 0.2s linear;
+	        }
+				.vk {
+					background-image: url(../img/vk.png);
+					width: 30px;
+					height: 30px;
+					background-size: contain;
+				}
+				.linkedin {
+					background-image: url(../img/linkedin.png);
+					width: 30px;
+					height: 30px;
+					background-size: contain;
+				}
+				.twitter {
+					background-image: url(../img/twitter.png);
+					width: 30px;
+					height: 30px;
+					background-size: contain;
+				}
+				.skype {
+					background-image: url(../img/skype.png);
+					width: 30px;
+					height: 30px;
+					background-size: contain;
+				}
+				.email {
+					background-image: url(../img/email.png);
+					width: 30px;
+					height: 30px;
+					background-size: contain;
+				}
+				.github {
+					background-image: url(../img/github.png);
+					width: 30px;
+					height: 30px;
+					background-size: contain;
+				}
 
 p,
 ul, ol, dl,
